Update relative file paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
-    <script src="./main.js" defer></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="page-container">
@@ -14,8 +14,8 @@
             class="tom-portrait"
             alt="Portrait of Tom."
             srcset="
-              ../images/bombadil-small.jpg 300w,
-              ../images/bombadil-large.jpg 800w
+              ./images/bombadil-small.jpg 300w,
+              ./images/bombadil-large.jpg 800w
             "
             sizes="
         (max-width: 560px) calc(100vw - 2rem),
@@ -39,17 +39,17 @@
           <div class="about-me-logos">
             <img
               class="about-me-link"
-              src="../src/assets/github-mark-white.svg"
+              src="./images/github-mark-white.svg"
               alt="github link"
             />
             <img
               class="about-me-link"
-              src="../src/assets/linkedin-white.svg"
+              src="./images/linkedin-white.svg"
               alt="linkedin link"
             />
             <img
               class="about-me-link"
-              src="../src/assets/twitter-white.svg"
+              src="./images/twitter-white.svg"
               alt="twitter link"
             />
           </div>
@@ -67,14 +67,14 @@
                   <a href="#">
                     <img
                       class="github-logo"
-                      src="../src/assets/github-mark-white.svg"
+                      src="./images/github-mark-white.svg"
                       alt="github link"
                     />
                   </a>
                   <a href="#">
                     <img
                       class="live-view"
-                      src="../src/assets/live-view.svg"
+                      src="./images/live-view.svg"
                       alt="live view link"
                     />
                   </a>
@@ -95,14 +95,14 @@
                   <a href="#">
                     <img
                       class="github-logo"
-                      src="../src/assets/github-mark-white.svg"
+                      src="./images/github-mark-white.svg"
                       alt="github link"
                     />
                   </a>
                   <a href="#">
                     <img
                       class="live-view"
-                      src="../src/assets/live-view.svg"
+                      src="./images/live-view.svg"
                       alt="live view link"
                     />
                   </a>
@@ -123,14 +123,14 @@
                   <a href="#">
                     <img
                       class="github-logo"
-                      src="../src/assets/github-mark-white.svg"
+                      src="./images/github-mark-white.svg"
                       alt="github link"
                     />
                   </a>
                   <a href="#">
                     <img
                       class="live-view"
-                      src="../src/assets/live-view.svg"
+                      src="./images/live-view.svg"
                       alt="live view link"
                     />
                   </a>
@@ -151,14 +151,14 @@
                   <a href="#">
                     <img
                       class="github-logo"
-                      src="../src/assets/github-mark-white.svg"
+                      src="./images/github-mark-white.svg"
                       alt="github link"
                     />
                   </a>
                   <a href="#">
                     <img
                       class="live-view"
-                      src="../src/assets/live-view.svg"
+                      src="./images/live-view.svg"
                       alt="live view link"
                     />
                   </a>
@@ -179,14 +179,14 @@
                   <a href="#">
                     <img
                       class="github-logo"
-                      src="../src/assets/github-mark-white.svg"
+                      src="./images/github-mark-white.svg"
                       alt="github link"
                     />
                   </a>
                   <a href="#">
                     <img
                       class="live-view"
-                      src="../src/assets/live-view.svg"
+                      src="./images/live-view.svg"
                       alt="live view link"
                     />
                   </a>
@@ -207,14 +207,14 @@
                   <a href="#">
                     <img
                       class="github-logo"
-                      src="../src/assets/github-mark-white.svg"
+                      src="./images/github-mark-white.svg"
                       alt="github link"
                     />
                   </a>
                   <a href="#">
                     <img
                       class="live-view"
-                      src="../src/assets/live-view.svg"
+                      src="./images/live-view.svg"
                       alt="live view link"
                     />
                   </a>
@@ -247,24 +247,24 @@
         <div class="footer-logos">
           <img
             class="footer-link"
-            src="../src/assets/github-mark-white.svg"
+            src="./images/github-mark-white.svg"
             alt="github link"
           />
           <img
             class="footer-link"
-            src="../src/assets/linkedin-white.svg"
+            src="./images/linkedin-white.svg"
             alt="linkedin link"
           />
           <img
             class="footer-link"
-            src="../src/assets/twitter-white.svg"
+            src="./images/twitter-white.svg"
             alt="twitter link"
           />
         </div>
       </div>
       <img
         class="footer-image"
-        src="../images/bombadil-footer.jpeg"
+        src="./images/bombadil-footer.jpeg"
         alt="Tom in nature"
       />
     </footer>
